fixed nav // on small devices 481px and below

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -495,9 +495,10 @@ figure {
   display: block;
   margin: 30px auto 0 auto;
   transition: ease-out .2s;
-  width: 52%;
+  width: 350px;
   color: $cloudy;
   text-decoration: none;
+  text-align: center;
 }
 
 .content-button:hover {
@@ -1293,6 +1294,12 @@ h3.services-subheading {
 
   .section-big-title {
     font-size: 2.5em;
+  }
+}
+
+@media (max-width: 481px) {
+  .hero .navigation li:nth-child(3):after {
+    content: "";
   }
 }
 
